--- a/构造函数.md
+++ b/构造函数.md
@@ -1,7 +1,15 @@
+# 构造函数
+>我们用构造函数来创建对象
 
-
-### 5.2.2 构造函数
+### 为什么有构造函数
+构造函数是我们用来创建对象的一种特殊的函数。区别于普通函数，构造函数是用new来调用的，如下函数：
  
+```javascript { .theme-peacock }
+var superObj = function(){
+}
+
+new superObj()
+```
 > 所有对象都有一个constructor （构造）[kən'strʌktə] 属性，指向这个对象的构造函数，因为一个对象是肯定是一个函数创建的。
 > 包含对象、函数、字符串、数字、布尔值等等
 
