--- a/构造函数.md
+++ b/构造函数.md
@@ -1,6 +1,7 @@
 # 构造函数
 ### 引子和说明
 1. 我们假定你已经了解this和原型概念了，如果没有可以阅读本系列其他两章，this和原型的讲解。
+2. 我们假定你初步了解了创建对象的多种方法。
 
 >我们用构造函数来创建对象
 
@@ -12,7 +13,29 @@ var superObj = function(){
 }
 
 new superObj()
+// 返回一个空对象{}
 ```
+
+### 函数prototype
+我们知道每个对象都有一个属性叫原型[[prototype]]也就是\_\_proto\_\_,这个属性指向一个对象叫做原型对象。那这个原型对象是怎么来的呢？我们上面讲了，对象是构造函数创造的，那么这个原型，和原型对象应该就是这个构造函数创造的。恰巧函数拥有一个只有函数才有的属性叫prototype，这个属性和[[prototype]]太像了。所以我们可以简单理解构造函数的prototype就是起了指定生成对象的[[prototype]]的作用。
+
+> 我们总结一下上面的描述
+1. 构造函数有一个专有属性prototype。
+2. 对象有一个属性[[prototype]]。
+3. 对象是构造函数创建的。
+事实上，构造函数在创建对象时，就是把构造函数自己的prototype指向的对象赋值给了新创建对象的[[prototype]]属性。所以其实构造函数prototype指向的对象就是这个构造函数创建的对象的[[prototype]]原型属性指向的对象。2个属性指向同一个对象。
+
+
+```javascript { .theme-peacock }
+var superObj = function(){
+}
+
+var instance = new superObj();
+instance.__proto__ === superObj.prototype;
+// true
+```
+
+
 > 所有对象都有一个constructor （构造）[kən'strʌktə] 属性，指向这个对象的构造函数，因为一个对象是肯定是一个函数创建的。
 > 包含对象、函数、字符串、数字、布尔值等等
 
