--- a/构造函数.md
+++ b/构造函数.md
@@ -17,7 +17,8 @@ new superObj()
 ```
 
 ### 函数prototype
-我们知道每个对象都有一个属性叫原型[[prototype]]也就是\_\_proto\_\_,这个属性指向一个对象叫做原型对象。那这个原型对象是怎么来的呢？我们上面讲了，对象是构造函数创造的，那么这个原型，和原型对象应该就是这个构造函数创造的。恰巧函数拥有一个只有函数才有的属性叫prototype，这个属性和[[prototype]]太像了。所以我们可以简单理解构造函数的prototype就是起了指定生成对象的[[prototype]]的作用。
+我们知道每个对象都有一个属性叫原型[[prototype]]也就是\_\_proto\_\_,这个属性指向一个对象叫做原型对象。那这个原型对象是怎么来的呢？我们上面讲了，对象是构造函数创造的，那么这个原型，和原型对象应该就是这个构造函数创造的。
+恰巧函数拥有一个只有函数才有的属性叫prototype，这个属性和[[prototype]]太像了。所以我们可以简单理解构造函数的prototype就是起了指定生成对象的[[prototype]]的作用。
 
 > 我们总结一下上面的描述
 1. 构造函数有一个专有属性prototype。
