--- a/构造函数.md
+++ b/构造函数.md
@@ -36,10 +36,9 @@ var instance = new superObj();
 instance.__proto__ === superObj.prototype;
 // true
 ```
-
+### 对象的constructor
 
 > 所有对象都有一个constructor （构造）[kən'strʌktə] 属性，指向这个对象的构造函数，因为一个对象是肯定是一个函数创建的。
-> 包含对象、函数、字符串、数字、布尔值等等
 
 > JS 是面向对象最友好的语言，因为很少有语言可以不用过类，直接通过字面量创建。
 
