--- a/构造函数.md
+++ b/构造函数.md
@@ -40,9 +40,25 @@ instance.__proto__ === superObj.prototype;
 
 > 所有对象都有一个constructor （构造）[kən'strʌktə] 属性，指向这个对象的构造函数，因为一个对象是肯定是一个函数创建的。
 
-> JS 是面向对象最友好的语言，因为很少有语言可以不用过类，直接通过字面量创建。
+> 但是大家平时创建对象很少用到构造函数，是因为JS 是面向对象最友好的语言，因为很少有语言可以不用过类，直接通过字面量创建。
 
 
+```javascript { .theme-peacock }
+
+var obj= {}
+obj.constructor
+// 所以对象的构造函数就是Object
+// Object() { [native code] }
+
+function fun (){}
+fun.constructor
+// 函数的构造函数就是Function
+// Function() { [native code] }
+
+// 对象没有prototype
+obj.prototype
+// undefined
+```
 
 
 
